# simple_storage_engines

./: CMakeLists.txt
src/: disk_storage.cpp  disk_storage.h  hash_storage.cpp  hash_storage.h  multikey_storage.cpp  multikey_storage.h  storage.h  storage_types.h  stream_storage.h
tests/commonTestTools/: testStorageTools.cpp  testStorageTools.h
tests/perfomanceDiskStorage/: main.cpp
tests/testDiskStorage/: main.cpp
tests/testStorage/: main.cpp
